# MochiBeta

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.ccmd  Makefile.dbtest  Makefile.i18n  README.md  READMEja.md  mb.pot  mingw-toolchain.cmake  resource.rc
.cache/clangd/index/: database.cpp.B89C68E156AF704F.idx  database.hpp.9D493DA5448E5602.idx  main.cpp.181C55DDEBA931BB.idx  main.hpp.58BB820E1CF48C11.idx  record_window.cpp.8A42325A5ABE11CD.idx  record_window.hpp.6C445875E66A60BE.idx  time_log.cpp.BE4D59398CDD2931.idx  time_log.hpp.419B9DC0341B084A.idx
docker/mingw/: Dockerfile
locale/en/LC_MESSAGES/: mb.po
locale/ja/LC_MESSAGES/: mb.po
src/: main.cpp  main.hpp  version.hpp
src/clock/: clock.cpp
src/core/clock/: clock.cpp  clock.hpp  now_wxstring.cpp  now_wxstring.hpp
src/core/db/: database.cpp  database.hpp  db.md  db_activity_report.cpp  db_record.cpp  db_test.cpp  db_total.cpp
src/core/utils/: format_time.cpp  format_time.hpp
src/db/: database.cpp  database.hpp  db_test.cpp
src/gui/connect_db/: connect_db.cpp  connect_db.hpp
src/gui/mainwnd/: mainwnd.cpp  mainwnd.hpp
src/gui/mainwnd/activity_report/: activity_report.cpp  activity_report.hpp
src/gui/mainwnd/clock/: clock.cpp  clock.hpp
src/gui/mainwnd/dashboard/: dashboard.cpp  dashboard.hpp
src/gui/mainwnd/inspector/: inspector.cpp  inspector.hpp
src/gui/mainwnd/recording/: recording.cpp  recording.hpp
src/gui/mainwnd/statistic/: statistic.cpp  statistic.hpp
src/gui/mainwnd/treectrl/: treectrl.cpp  treectrl.hpp
src/gui/record/: record_window.cpp
src/gui/theme/: apptheme.hpp
src/gui/time_log/: edit_category.cpp  edit_category.hpp  edit_parent_id.cpp  edit_parent_id.hpp  time_log.cpp  time_log.hpp  tree_item_data.hpp
src/gui/todo/: todo.cpp  todo.hpp
src/time_log/: time_log.cpp
src/ui/: record_window.hpp  time_log.cpp  time_log.hpp
